added folders and flies

--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "mongoose": "^5.3.16",
+    "express": "^4.17.1",
+    "mongojs": "^3.1.0",
+    "mongoose": "^5.9.25",
     "morgan": "^1.9.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/singhpri30/Workout-Tracker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/singhpri30/Workout-Tracker/issues"
+  },
+  "homepage": "https://github.com/singhpri30/Workout-Tracker#readme"
 }
